вторые правки 15 спринта